--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "author": "Yuku Takahashi <taka84u9@gmail.com>",
   "name": "jquery-textcomplete",
-  "version": "0.2.6",
+  "version": "0.3.0-beta1",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-connect": "~0.3.0"
+    "grunt-contrib-watch": "~0.6.1"
   }
 }
