--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "author": "Yuku Takahashi <taka84u9@gmail.com>",
   "name": "jquery-textcomplete",
-  "version": "0.3.0-beta1",
+  "version": "0.3.0-beta2",
+  "homepage": "http://yuku-t.com/jquery-textcomplete",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/yuku-t/jquery-textcomplete.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yuku-t/jquery-textcompelte/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/yuku-t/jquery-textcompelte/blob/master/LICENSE"
+    }
+  ],
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-write-bower-json": "~0.0.1"
   }
 }
