--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery-textcomplete",
-  "version": "0.3.0-beta2",
+  "version": "0.3.0",
   "main": "dist/jquery.textcomplete.min.js",
   "dependencies": {
     "jquery": ">=1.7.0"
