--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "author": "Yuku Takahashi <taka84u9@gmail.com>",
   "name": "jquery-textcomplete",
+  "main": "dist/jquery.textcomplete",
   "version": "0.5.1",
   "homepage": "http://yuku-t.com/jquery-textcomplete",
   "repository": {
