--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "author": "Yuku Takahashi <taka84u9@gmail.com>",
   "name": "jquery-textcomplete",
   "main": "dist/jquery.textcomplete",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "homepage": "http://yuku-t.com/jquery-textcomplete",
   "repository": {
     "type": "git",
-    "url": "git://github.com/yuku-t/jquery-textcomplete.git"
+    "url": "git+ssh://git@github.com/yuku-t/jquery-textcomplete.git"
   },
   "keywords": [
     "jquery-plugin",
@@ -15,12 +15,7 @@
   "bugs": {
     "url": "https://github.com/yuku-t/jquery-textcomplete/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/yuku-t/jquery-textcomplete/blob/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-concat": "~0.5.0",
