--- a/packages/textcomplete-core/package.json
+++ b/packages/textcomplete-core/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "textcomplete",
+  "name": "@textcomplete/core",
   "version": "0.0.0",
-  "description": "Autocomplete for Textarea elements.",
+  "description": "Textcomplete core.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "https://github.com/yuku/textcomplete",
@@ -12,10 +12,7 @@
     "build": "rm -fr dist && tsc"
   },
   "dependencies": {
-    "@textcomplete/core": "^0.0.0",
-    "@types/textarea-caret": "^3.0.0",
-    "textarea-caret": "^3.1.0",
-    "undate": "^0.3.0"
+    "eventemitter3": "^4.0.4"
   },
   "devDependencies": {
     "typescript": "^3.9.5"
