--- a/packages/textcomplete-textarea/package.json
+++ b/packages/textcomplete-textarea/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "textcomplete",
+  "name": "@textcomplete/textarea",
   "version": "0.0.0",
   "description": "Autocomplete for Textarea elements.",
   "main": "dist/index.js",
@@ -12,9 +12,11 @@
     "build": "rm -fr dist && tsc"
   },
   "dependencies": {
-    "@textcomplete/core": "^0.0.0",
     "@types/textarea-caret": "^3.0.0",
     "textarea-caret": "^3.1.0",
     "undate": "^0.3.0"
+  },
+  "peerDependencies": {
+    "@textcomplete/core": "^0.0.0"
   }
 }
