Rewrite textcomplete-codemirror

--- a/lerna.json
+++ b/lerna.json
@@ -2,9 +2,10 @@
   "npmClient": "yarn",
   "useWorkspaces": true,
   "packages": [
-    "docs",
     "packages/textcomplete-core",
-    "packages/textcomplete"
+    "packages/textcomplete-textarea",
+    "packages/textcomplete-codemirror",
+    "docs"
   ],
   "version": "independent"
 }
