--- a/packages/textcomplete-codemirror/package.json
+++ b/packages/textcomplete-codemirror/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "https://github.com/yuku/textcomplete",
-  "homepage": "https://github.com/yuku/textcomplete",
+  "homepage": "https://yuku.takahashi.coffee/textcomplete",
   "author": "Yuku Takahashi",
   "license": "MIT",
   "scripts": {
