--- a/docs/package.json
+++ b/docs/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "rm -fr dist && parcel build index.pug",
+    "build": "rm -fr dist cache && parcel build index.pug",
     "start": "parcel index.pug"
   },
   "dependencies": {
