--- a/packages/textcomplete-textarea/package.json
+++ b/packages/textcomplete-textarea/package.json
@@ -12,6 +12,7 @@
     "build": "rm -fr dist && tsc"
   },
   "dependencies": {
+    "@textcomplete/core": "^0.0.0",
     "@types/textarea-caret": "^3.0.0",
     "textarea-caret": "^3.1.0",
     "undate": "^0.3.0"
