--- a/docs/package.json
+++ b/docs/package.json
@@ -4,6 +4,10 @@
   "version": "0.0.0",
   "scripts": {
     "build": "rm -fr dist cache && parcel build index.pug",
+    "format:eslint": "eslint --fix '**/*.ts' '**/*.tsx'",
+    "format:prettier": "prettier --write '**/*.ts' '**/*.tsx'",
+    "format": "run-s format:eslint format:prettier",
+    "lint": "eslint '**/*.ts' '**/*.tsx'",
     "start": "parcel index.pug"
   },
   "dependencies": {
@@ -18,10 +22,19 @@
   "devDependencies": {
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
+    "eslint": "^7.2.0",
     "parcel-bundler": "^1.12.4",
+    "prettier": "^2.0.5",
     "pug": "^3.0.0",
     "sass": "^1.26.8"
+  },
+  "prettier": {
+    "semi": false
   }
 }
