--- a/packages/textcomplete-codemirror/package.json
+++ b/packages/textcomplete-codemirror/package.json
@@ -9,17 +9,31 @@
   "author": "Yuku Takahashi",
   "license": "MIT",
   "scripts": {
-    "build": "rm -fr dist && tsc"
+    "build": "rm -fr dist && tsc",
+    "format:eslint": "eslint --fix 'src/**/*.ts'",
+    "format:prettier": "prettier --write 'src/**/*.ts'",
+    "format": "run-s format:eslint format:prettier",
+    "lint": "eslint 'src/**/*.ts'"
   },
   "dependencies": {
     "@types/codemirror": "^0.0.96"
   },
   "devDependencies": {
     "@textcomplete/core": "^0.0.0",
-    "codemirror": "^5.54"
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "codemirror": "^5.54",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint": "^7.2.0",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.5"
   },
   "peerDependencies": {
     "codemirror": "^5.54",
     "@textcomplete/core": "^0.0.0"
+  },
+  "prettier": {
+    "semi": false
   }
 }
