--- a/packages/textcomplete-core/package.json
+++ b/packages/textcomplete-core/package.json
@@ -9,9 +9,29 @@
   "author": "Yuku Takahashi",
   "license": "MIT",
   "scripts": {
-    "build": "rm -fr dist && tsc"
+    "build": "rm -fr dist && tsc",
+    "format:eslint": "eslint --fix 'src/**/*.ts'",
+    "format:prettier": "prettier --write 'src/**/*.ts'",
+    "format": "run-s format:eslint format:prettier",
+    "lint": "eslint 'src/**/*.ts'",
+    "test": "jest"
   },
   "dependencies": {
     "eventemitter3": "^4.0.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint": "^7.2.0",
+    "jest": "^26.0.1",
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.9.5"
+  },
+  "prettier": {
+    "semi": false
   }
 }
