--- a/packages/textcomplete-textarea/package.json
+++ b/packages/textcomplete-textarea/package.json
@@ -9,7 +9,11 @@
   "author": "Yuku Takahashi",
   "license": "MIT",
   "scripts": {
-    "build": "rm -fr dist && tsc"
+    "build": "rm -fr dist && tsc",
+    "format:eslint": "eslint --fix 'src/**/*.ts'",
+    "format:prettier": "prettier --write 'src/**/*.ts'",
+    "format": "run-s format:eslint format:prettier",
+    "lint": "eslint 'src/**/*.ts'"
   },
   "dependencies": {
     "@textcomplete/core": "^0.0.0",
@@ -17,7 +21,20 @@
     "textarea-caret": "^3.1.0",
     "undate": "^0.3.0"
   },
+  "devDependencies": {
+    "@textcomplete/core": "^0.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint": "^7.2.0",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.5"
+  },
   "peerDependencies": {
     "@textcomplete/core": "^0.0.0"
+  },
+  "prettier": {
+    "semi": false
   }
 }
