--- a/lerna.json
+++ b/lerna.json
@@ -2,9 +2,7 @@
   "npmClient": "yarn",
   "useWorkspaces": true,
   "packages": [
-    "packages/textcomplete-core",
-    "packages/textcomplete-textarea",
-    "packages/textcomplete-codemirror",
+    "packages/textcomplete-*",
     "docs"
   ],
   "version": "independent"
