--- a/packages/textcomplete-utils/package.json
+++ b/packages/textcomplete-utils/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@textcomplete/textarea",
+  "name": "@textcomplete/utils",
   "version": "0.0.0",
-  "description": "Textcomplete editor for HTMLTextAreaElement",
+  "description": "Utility functions for Textcomplete editors",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "https://github.com/yuku/textcomplete",
@@ -15,13 +15,6 @@
     "format": "run-s format:eslint format:prettier",
     "lint": "eslint 'src/**/*.ts'"
   },
-  "dependencies": {
-    "@textcomplete/core": "^0.0.0",
-    "@textcomplete/utils": "^0.0.0",
-    "@types/textarea-caret": "^3.0.0",
-    "textarea-caret": "^3.1.0",
-    "undate": "^0.3.0"
-  },
   "devDependencies": {
     "@textcomplete/core": "^0.0.0",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
@@ -31,9 +24,6 @@
     "eslint": "^7.2.0",
     "prettier": "^2.0.5",
     "typescript": "^3.9.5"
-  },
-  "peerDependencies": {
-    "@textcomplete/core": "^0.0.0"
   },
   "prettier": {
     "semi": false
