--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,14 @@
 {
+  "version": "0.0.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
+  "command": {
+    "publish": {
+      "ignoreChanges": ["docs", "*.md"]
+    }
+  },
   "packages": [
     "packages/textcomplete-*",
     "docs"
-  ],
-  "version": "independent"
+  ]
 }
