--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,6 +14,8 @@ jobs:
           node-version: 12.x
           registry-url: https://registry.npmjs.org
       - run: yarn install --no-lockfile
+      - run: yarn lerna bootstrap
+      - run: yarn build:packages
       - run: yarn lerna publish from-git --yes --no-push --no-git-tag-version
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
