--- a/packages/textcomplete-codemirror/package.json
+++ b/packages/textcomplete-codemirror/package.json
@@ -33,6 +33,9 @@
     "codemirror": "^5.54",
     "@textcomplete/core": "^0.0.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "prettier": {
     "semi": false
   }
