--- a/packages/textcomplete-contenteditable/package.json
+++ b/packages/textcomplete-contenteditable/package.json
@@ -31,6 +31,9 @@
   "peerDependencies": {
     "@textcomplete/core": "^0.0.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "prettier": {
     "semi": false
   }
