--- a/packages/textcomplete-core/package.json
+++ b/packages/textcomplete-core/package.json
@@ -31,6 +31,9 @@
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "prettier": {
     "semi": false
   }
