--- a/packages/textcomplete-utils/package.json
+++ b/packages/textcomplete-utils/package.json
@@ -25,6 +25,9 @@
     "prettier": "^2.0.5",
     "typescript": "^3.9.5"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "prettier": {
     "semi": false
   }
