--- a/packages/textcomplete-codemirror/package.json
+++ b/packages/textcomplete-codemirror/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@textcomplete/codemirror",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Textcomplete editor for CodeMirror",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,19 +19,19 @@
     "@types/codemirror": "^0.0.96"
   },
   "devDependencies": {
-    "@textcomplete/core": "^0.0.0",
+    "@textcomplete/core": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
     "codemirror": "^5.54",
+    "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint": "^7.2.0",
     "prettier": "^2.0.5",
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "codemirror": "^5.54",
-    "@textcomplete/core": "^0.0.0"
+    "@textcomplete/core": "^0.0.0",
+    "codemirror": "^5.54"
   },
   "publishConfig": {
     "access": "public"
