--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -15,3 +15,4 @@ rules:
     - 'error'
     - ignoreRestSiblings: true
       argsIgnorePattern: '^_'
+  '@typescript-eslint/no-explicit-any': 'error'
