--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -9,7 +9,7 @@ plugins:
 extends:
   - 'plugin:@typescript-eslint/recommended'
   - 'plugin:prettier/recommended'
-  - 'prettier/@typescript-eslint'
+  - 'prettier'
 rules:
   '@typescript-eslint/no-unused-vars':
     - 'error'
