--- a/docs/package.json
+++ b/docs/package.json
@@ -21,19 +21,20 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@types/react": "^16.9.36",
-    "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^6.11.0",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "parcel-bundler": "^1.12.4",
+    "lerna": "^4.0.0",
+    "parcel-bundler": "1.12.3",
     "prettier": "^2.0.5",
-    "pug": "^3.0.0",
-    "sass": "^1.26.8"
+    "pug": "^3.0.2",
+    "sass": "^1.32.8"
   },
   "prettier": {
     "semi": false
