--- a/packages/textcomplete-codemirror/package.json
+++ b/packages/textcomplete-codemirror/package.json
@@ -20,14 +20,7 @@
   },
   "devDependencies": {
     "@textcomplete/core": "^0.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
-    "codemirror": "^5.59.4",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^2.0.5",
-    "typescript": "^4.2.3"
+    "codemirror": "^5.54"
   },
   "peerDependencies": {
     "@textcomplete/core": "^0.1.9",
@@ -35,8 +28,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "prettier": {
-    "semi": false
   }
 }
