--- a/packages/textcomplete-textarea/package.json
+++ b/packages/textcomplete-textarea/package.json
@@ -17,12 +17,12 @@
   },
   "dependencies": {
     "@textcomplete/utils": "^0.1.9",
-    "@types/textarea-caret": "^3.0.0",
     "textarea-caret": "^3.1.0",
     "undate": "^0.3.0"
   },
   "devDependencies": {
-    "@textcomplete/core": "^0.1.9"
+    "@textcomplete/core": "^0.1.9",
+    "@types/textarea-caret": "^3.0.0"
   },
   "peerDependencies": {
     "@textcomplete/core": "^0.1.9"
