Use nodejs 14 in CI

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,8 +10,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 12.x
-      - run: yarn install --no-lockfile
+          node-version: 14.x
+      - run: yarn install
       - run: yarn lerna bootstrap
       - run: yarn build
       - run: yarn lint
