--- a/packages/textcomplete-codemirror/package.json
+++ b/packages/textcomplete-codemirror/package.json
@@ -15,19 +15,10 @@
     "format": "run-s format:eslint format:prettier",
     "lint": "eslint 'src/**/*.ts'"
   },
-  "dependencies": {
-    "@types/codemirror": "^0.0.96"
-  },
   "devDependencies": {
     "@textcomplete/core": "^0.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
-    "codemirror": "^5.59.4",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^2.0.5",
-    "typescript": "^4.2.3"
+    "@types/codemirror": "^5.60.2",
+    "codemirror": "^5.54"
   },
   "peerDependencies": {
     "@textcomplete/core": "^0.1.9",
@@ -35,8 +26,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "prettier": {
-    "semi": false
   }
 }
