--- a/packages/textcomplete-textarea/package.json
+++ b/packages/textcomplete-textarea/package.json
@@ -17,27 +17,17 @@
   },
   "dependencies": {
     "@textcomplete/utils": "^0.1.9",
-    "@types/textarea-caret": "^3.0.0",
     "textarea-caret": "^3.1.0",
     "undate": "^0.3.0"
   },
   "devDependencies": {
     "@textcomplete/core": "^0.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^2.0.5",
-    "typescript": "^4.2.3"
+    "@types/textarea-caret": "^3.0.0"
   },
   "peerDependencies": {
     "@textcomplete/core": "^0.1.9"
   },
   "publishConfig": {
     "access": "public"
-  },
-  "prettier": {
-    "semi": false
   }
 }
