--- a/docs/package.json
+++ b/docs/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.1.12",
   "scripts": {
-    "build": "rm -fr dist cache && parcel build index.pug --public-url /textcomplete",
+    "build": "rm -fr dist .cache && parcel build index.pug --public-url /textcomplete",
     "format:eslint": "eslint --fix '**/*.ts' '**/*.tsx'",
     "format:prettier": "prettier --write '**/*.ts' '**/*.tsx'",
     "format": "run-s format:eslint format:prettier",
@@ -11,10 +11,10 @@
     "start": "parcel index.pug"
   },
   "dependencies": {
-    "@textcomplete/codemirror": "^0.1.11",
+    "@textcomplete/codemirror": "^0.1.12",
     "@textcomplete/contenteditable": "^0.1.12",
-    "@textcomplete/core": "^0.1.11",
-    "@textcomplete/textarea": "^0.1.11",
+    "@textcomplete/core": "^0.1.12",
+    "@textcomplete/textarea": "^0.1.12",
     "codemirror": "^5.54.0",
     "prism-react-renderer": "^1.1.1",
     "react": "^17.0.2",
