--- a/package.json
+++ b/package.json
@@ -16,20 +16,19 @@
     "test": "lerna run test --parallel"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.0",
-    "lerna": "^3.22.1",
+    "@types/jest": "^29.5.10",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "~29.7.0",
+    "lerna": "^8.0.0",
+    "rimraf": "^5.0.5",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3"
-  },
-  "prettier": {
-    "semi": false
+    "prettier": "^3.1.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.2"
   }
 }
