--- a/packages/textcomplete-codemirror/package.json
+++ b/packages/textcomplete-codemirror/package.json
@@ -9,19 +9,19 @@
   "author": "Yuku Takahashi",
   "license": "MIT",
   "scripts": {
-    "build": "rm -fr dist && tsc",
-    "format:eslint": "eslint --fix 'src/**/*.ts'",
-    "format:prettier": "prettier --write 'src/**/*.ts'",
+    "build": "rimraf dist && tsc",
+    "format:eslint": "eslint --fix src/**/*.ts",
+    "format:prettier": "prettier --write src/**/*.ts",
     "format": "run-s format:eslint format:prettier",
-    "lint": "eslint 'src/**/*.ts'"
+    "lint": "eslint src/**/*.ts"
   },
   "devDependencies": {
-    "@textcomplete/core": "^0.1.11",
+    "@textcomplete/core": "^0.1.12",
     "@types/codemirror": "^5.60.2",
     "codemirror": "^5.54"
   },
   "peerDependencies": {
-    "@textcomplete/core": "^0.1.9",
+    "@textcomplete/core": "^0.1.12",
     "codemirror": "^5.54"
   },
   "publishConfig": {
