--- a/packages/textcomplete-contenteditable/package.json
+++ b/packages/textcomplete-contenteditable/package.json
@@ -9,20 +9,20 @@
   "author": "Yuku Takahashi",
   "license": "MIT",
   "scripts": {
-    "build": "rm -fr dist && tsc",
-    "format:eslint": "eslint --fix 'src/**/*.ts'",
-    "format:prettier": "prettier --write 'src/**/*.ts'",
+    "build": "rimraf dist && tsc",
+    "format:eslint": "eslint --fix src/**/*.ts",
+    "format:prettier": "prettier --write src/**/*.ts",
     "format": "run-s format:eslint format:prettier",
-    "lint": "eslint 'src/**/*.ts'"
+    "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
-    "@textcomplete/utils": "^0.1.11"
+    "@textcomplete/utils": "^0.1.12"
   },
   "devDependencies": {
-    "@textcomplete/core": "^0.1.11"
+    "@textcomplete/core": "^0.1.12"
   },
   "peerDependencies": {
-    "@textcomplete/core": "^0.1.9"
+    "@textcomplete/core": "^0.1.12"
   },
   "publishConfig": {
     "access": "public"
