--- a/packages/textcomplete-textarea/package.json
+++ b/packages/textcomplete-textarea/package.json
@@ -9,23 +9,23 @@
   "author": "Yuku Takahashi",
   "license": "MIT",
   "scripts": {
-    "build": "rm -fr dist && tsc",
-    "format:eslint": "eslint --fix 'src/**/*.ts'",
-    "format:prettier": "prettier --write 'src/**/*.ts'",
+    "build": "rimraf dist && tsc",
+    "format:eslint": "eslint --fix src/**/*.ts",
+    "format:prettier": "prettier --write src/**/*.ts",
     "format": "run-s format:eslint format:prettier",
-    "lint": "eslint 'src/**/*.ts'"
+    "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
-    "@textcomplete/utils": "^0.1.11",
+    "@textcomplete/utils": "^0.1.12",
     "textarea-caret": "^3.1.0",
     "undate": "^0.3.0"
   },
   "devDependencies": {
-    "@textcomplete/core": "^0.1.11",
-    "@types/textarea-caret": "^3.0.0"
+    "@textcomplete/core": "^0.1.12",
+    "@types/textarea-caret": "^3.0.3"
   },
   "peerDependencies": {
-    "@textcomplete/core": "^0.1.9"
+    "@textcomplete/core": "^0.1.12"
   },
   "publishConfig": {
     "access": "public"
